# hse-2019-pb-tasks

./: .gitignore  .travis.yml  comment.txt  grep.py  grep_test.py  requirements-dev.txt  test.txt
common/: README.md
task01-grep/: .coverage  .gitignore  README.md  grep.py  grep.py,cover  test_grep.py  test_grep_update.py  test_grep_updated.py
task02-git/: README.md  largest_heads_run.py
task03-bots/: .coverage  .gitignore  ARCHITECTURE.md  README.md  alarm_user_handler.py  bot.py  calculator_user_handler.py  chat_bot.py  chat_bot_test.py  check_codestyle.sh  cli_multiple.py  cli_single.py  gui_multiple.py  tictactoe.py  tictactoe_user_handler.py  tictactoe_user_handler_test.py
task03-git/: calculator_user_handler.py  cli_multiple.py  cli_single.py  gui_multiple.py  tictactoe_user_handler.py
task04-tsqueue/: .clang-format  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  queue_test  tsqueue_test
task04-tsqueue/doctest/: doctest.h
task04-tsqueue/src/: queue.cpp  queue.h  queue_test.cpp  tsqueue.cpp  tsqueue.h  tsqueue_test.cpp
task05-fp-exercises/: Exercises.hs  README.md  RunTests.hs  picture.txt
task06-fp-yat/: MyRunTests.hs  README.md  RunMyTests.hs  RunTests.hs  Yat.hs  secret.txt
